# airflow_fakefill

./: .isort.cfg  README.md  config.yml  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  pre-commit.yml
afill/: __init__.py  catchup.py  cli.py
afill/helpers/: afutils.py  cfutils.py  cronvert.py  logging.py  template.py
fakefill/: catchup.py  cli.py
fakefill/helpers/: afutils.py  cfutils.py  cronvert.py  exceptions.py  sql.py  template.py
