[tool.poetry]
name = "afill"
version = "0.1.0"
description = ""
authors = ["Ben CHEN <bn@benbenbang.io>"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3.1"
loguru = "^0.5.2"
apache-airflow = "^1.10.12"
pre-commit = "^2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
afill="afill.cli:ffcli"
