[tool.poetry]
name = "fakefill"
version = "1.0.0"
description = "Fast & Fake Backfill Airflow DAGs Status"
authors = ["Ben CHEN <bn@benbenbang.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/benbenbang/airflow_fakefill"
keywords = ["airflow", "fakefill", "backfill", "fast", "success", "fill", "migration", "database"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
fakefill="fakefill.cli:cli"

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3.1"
loguru = "^0.5.2"
click = "^7.1.0"

[tool.poetry.dev-dependencies]
apache-airflow = ">=1.10.12"
psycopg2-binary = "^2.8.6"
twine = "^3.4.1"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
